{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 18,
  "lineage": "75de35ba-adb0-dc4d-d0d8-3cf5bfe11007",
  "resources": [
    {
      "module": "module.atlantis",
      "mode": "data",
      "type": "aws_subnet",
      "name": "self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:627315336549:subnet/subnet-072933a6322d83889",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "available_ip_address_count": 4086,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072933a6322d83889",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "627315336549",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-07cfc94aee4a81d01"
          }
        }
      ]
    },
    {
      "module": "module.atlantis",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:627315336549:vpc/vpc-07cfc94aee4a81d01",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-00abefc5a8fd1c361",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-d1bb5fb6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07cfc94aee4a81d01",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01676dbb31c184870",
            "owner_id": "627315336549",
            "tags": {
              "Name": "blog.devops4me.com"
            }
          }
        }
      ]
    },
    {
      "module": "module.atlantis",
      "mode": "managed",
      "type": "aws_eip",
      "name": "self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004cdf949ebea45f2",
            "association_id": "eipassoc-0205a87e8794de266",
            "domain": "vpc",
            "id": "eipalloc-004cdf949ebea45f2",
            "instance": "i-06dfccc5b5d6548a6",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0d0ddecb34cea01b5",
            "private_dns": "ip-172-31-20-234.ap-southeast-1.compute.internal",
            "private_ip": "172.31.20.234",
            "public_dns": "ec2-54-255-87-29.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.255.87.29",
            "public_ipv4_pool": "amazon",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "atlantis-elastic-ip-26ea3f9a"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "atlantis-elastic-ip-26ea3f9a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.atlantis.random_id.self"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis",
      "mode": "managed",
      "type": "aws_instance",
      "name": "self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0075a67de5ab4fa5e",
            "arn": "arn:aws:ec2:ap-southeast-1:627315336549:instance/i-06dfccc5b5d6548a6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "atlantis-26ea3f9a",
            "id": "i-06dfccc5b5d6548a6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.small",
            "ipv6_address_count": 0,
            "key_name": "atlantis-keypair-26ea3f9a",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d0ddecb34cea01b5",
            "private_dns": "ip-172-31-20-234.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.20.234",
            "public_dns": "ec2-54-255-87-29.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.255.87.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:627315336549:key/1d1d9afa-f8f6-45d2-8080-b9c5674a29f3",
                "throughput": 0,
                "volume_id": "vol-0e1be7fc10e5565fd",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "atlantis-secgroup-26ea3f9a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-072933a6322d83889",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "atlantis-server"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "atlantis-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-021d370c447a55d76"
            ]
          },
          "dependencies": [
            "module.atlantis.aws_iam_instance_profile.self",
            "module.atlantis.aws_iam_role.atlantis",
            "module.atlantis.aws_key_pair.self",
            "module.atlantis.aws_security_group.self",
            "module.atlantis.data.aws_ami.focal",
            "module.atlantis.data.aws_iam_policy_document.ec2_trust_policy",
            "module.atlantis.data.aws_subnet.self",
            "module.atlantis.data.aws_subnet_ids.default",
            "module.atlantis.data.aws_vpc.default",
            "module.atlantis.random_id.self"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:627315336549:security-group/sg-021d370c447a55d76",
            "description": "Security group to allow network inbound and outbound communication for Atlantis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-021d370c447a55d76",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "atlantis-secgroup-26ea3f9a",
            "name_prefix": "",
            "owner_id": "627315336549",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "terraform",
              "Name": "atlantis-secgroup-26ea3f9a"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "atlantis-secgroup-26ea3f9a"
            },
            "timeouts": null,
            "vpc_id": "vpc-07cfc94aee4a81d01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.data.aws_subnet.self",
            "module.atlantis.data.aws_subnet_ids.default",
            "module.atlantis.data.aws_vpc.default",
            "module.atlantis.random_id.self"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-141206599",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-021d370c447a55d76",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.aws_security_group.self",
            "module.atlantis.data.aws_subnet.self",
            "module.atlantis.data.aws_subnet_ids.default",
            "module.atlantis.data.aws_vpc.default",
            "module.atlantis.random_id.self"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1860494729",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-021d370c447a55d76",
            "security_group_rule_id": "sgr-0d404627f3a79d302",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.aws_security_group.self",
            "module.atlantis.data.aws_subnet.self",
            "module.atlantis.data.aws_subnet_ids.default",
            "module.atlantis.data.aws_vpc.default",
            "module.atlantis.random_id.self"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2617391587",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-021d370c447a55d76",
            "security_group_rule_id": "sgr-025a8e0f6bfe57ba1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.aws_security_group.self",
            "module.atlantis.data.aws_subnet.self",
            "module.atlantis.data.aws_subnet_ids.default",
            "module.atlantis.data.aws_vpc.default",
            "module.atlantis.random_id.self"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3631134780",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-021d370c447a55d76",
            "security_group_rule_id": "sgr-06fef862079860b23",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.aws_security_group.self",
            "module.atlantis.data.aws_subnet.self",
            "module.atlantis.data.aws_subnet_ids.default",
            "module.atlantis.data.aws_vpc.default",
            "module.atlantis.random_id.self"
          ]
        }
      ]
    }
  ]
}